# mini-note

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  import.sh  install.sh  mini-note.skill.md  pyproject.toml  requirements.txt  run.sh  verify.sh
docs/: design.md  windows-wsl.md
meta/: config.example.yaml  identities.example.yaml  purpose.md  schema.md
src/mini_note/: cli.py  config.py
src/mini_note/backup/: oss.py  snapshot.py  status.py
src/mini_note/indexer/: __init__.py  fts.py
src/mini_note/ingest/: extraction.py  large_file_queue.py  pipeline.py  progress.py  staging.py
src/mini_note/lint/: engine.py  health.py
src/mini_note/models/: claim.py  operation.py  path_utils.py  source_registry.py
src/mini_note/query/: engine.py
src/mini_note/review/: engine.py
tests/: conftest.py
tests/integration/: test_backup_failure.py  test_ingest_docx.py  test_ingest_markdown.py  test_ingest_media_code.py  test_ingest_pdf.py  test_ingest_xlsx_pptx.py  test_oss_backup.py  test_path_validation.py  test_restore_verify.py  test_sqlite_rebuild.py
tests/unit/: test_backup.py  test_claim_model.py  test_cli.py  test_config.py  test_extraction.py  test_fts.py  test_indexer.py  test_large_file_queue.py  test_lint_engine.py  test_lock_and_disk.py  test_operation_manifest.py  test_oss.py  test_path_utils.py  test_pipeline.py  test_progress.py  test_query_engine.py  test_review_engine.py  test_source_registry.py
